# rust-docker-boilerplate

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yml
src/: constants.rs  errors.rs  jwt.rs  main.rs  rootLogger.rs  utils.rs  vars.rs
src/api/: address.rs  category.rs  default.rs  identification.rs  image.rs  mod.rs  newsletter.rs  product.rs  purchase.rs  user.rs
src/middlewares/: Authentication.rs  RequestHandler.rs  mod.rs  request_handler.rs
src/orm/: address.rs  db_connection.rs  image.rs  mod.rs  newsletter.rs  promocodes.rs  purchase.rs  schema.rs  tax.rs
