[package]
name = "actix"
version = "0.1.0"
authors = ["chunlinwang <kazami0083@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-identity = "0.5.2"
actix-service = "2.0.2"
actix-session = { version="0.7.2",  features = ["redis-rs-session"] }
actix-slog = "0.2.1"
actix-web = "4"
chrono = { version="0.4.26", features = ["serde"] }
diesel = { version="2.1.0",  features = ["r2d2", "postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.19"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.0"
uuid = "1.4.0"

[dev-dependencies]
cargo-watch = "8.4.0"
pretty_assertions = "1.3.0"

